Replaced old template file with new one in Build workflow
This will cause the Build workflow to be triggered by changes to the new template.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - 'data.json'
-      - '.github/tpl.md'
+      - '.github/README-template.j2'
 
 jobs:
   build:
